re PR c++/7478 (internal compiler error on static_cast inside template)

PR c++/7478
	* cvt.c (convert_to_reference): Allow references as the incoming
	type.

	PR c++/7478
	* g++.dg/template/ref1.C: New test.

From-SVN: r58229