gcc/testsuite/g++.dg/template/ref1.C
@@ -1,0 +1,3 @@
+class a {} a1;
+template <a & p> class b { public: b() { static_cast <a &> (p); }; };
+int main() { b <a1> b1; };
